# odoo-spit-vr

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirement.txt
backend/app/api/: api_v1.py  deps.py
backend/app/api/routes/: auth.py  products.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: inventory.py
frontend/: package-lock.json  package.json
